created tiny containers

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </header>
 
     <main>
+      <!-- Gray Container- Learn something new everyday -->
+      <section>
         <h2 class="gray-background">
             <span class="learning-header">Learn something</span>
               <br>
@@ -35,8 +37,37 @@
               </p>
             </span>
               <img class="learning-img" src="images/banner.jpg">
+        </section>
+                <!-- White Container- It doesn't hurt to keep practicing -->
+        <section>
+          <h2 class="white-background">
+            <span id="information-text-heading">It doesn't hurt to keep practicing</span></h2>
+              <p class="information-text-paragraph">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br>
+              Eaque ratione nemo inventore eius cumque nulla tempore sint repudiandae debitis nesciunt corporis <br>
+              recusandae quidem iusto voluptates dolore, vitae pariatur ea? Voluptas."
+              <br>
+              <br>
+              <br>
+              Emanuel, Sr. Strategist at Hiring.com
+              </p>
+          <img class="information-img" src="images/information-main.jpg">
+      </section>
 
-          <h2 class="white-background">It does hurt to keep practicing</h2>
+              <!-- Small Right Container- Orientation Date-->
+      <section>
+        <h2 class="small-container-one">Orientation Date</h2>
+
+     </section>
+
+     <section>
+      <h2 class="small-container-two">On-Campus</h2>
+
+   </section>
+
+   <section>
+    <h2 class="small-container-three">Our Guest Lecture</h2>
+
+ </section>
     </main>
 
 
