completed first small container

--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
 
               <!-- Small Right Container- Orientation Date-->
       <section>
-        <h2 class="small-container-one">Orientation Date</h2>
+        <h2 class="small-container-one">
+          <span class="orientation-date-header">Orientation Date</span>
+        </h2>
 
+          <img class="orientation-img" src= "images/information-orientation.jpg">
      </section>
 
      <section>
@@ -66,8 +69,11 @@
 
    <section>
     <h2 class="small-container-three">Our Guest Lecture</h2>
+   </section>
 
- </section>
+   <!-- Images for three containers -->
+     
+    
     </main>
 
 
