completed three small containers heading and photo positioning

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Colmar Academy</title>
 
     <link href="styles.css" rel="stylesheet">
 </head>
@@ -52,27 +52,30 @@
               </p>
           <img class="information-img" src="images/information-main.jpg">
       </section>
-
-              <!-- Small Right Container- Orientation Date-->
+     <!-- Small Right Container- Orientation Date-->
       <section>
         <h2 class="small-container-one">
           <span class="orientation-date-header">Orientation Date</span>
         </h2>
-
-          <img class="orientation-img" src= "images/information-orientation.jpg">
+          <img class="orientation-img" src= "images/information-orientation.jpg"/>
      </section>
-
+    <!-- Small Right Container- On-Campus-->
      <section>
-      <h2 class="small-container-two">On-Campus</h2>
-
+      <h2 class="small-container-two">
+        <span class="on-campus-header">On-Campus</span>
+      </h2>
+      <img class="on-campus-img" src= "images/information-campus.jpg"/>
    </section>
+ 
+    <!-- Small Right Container- Our Guest Lecture-->
+    <section>
+    <h2 class="small-container-three">
+    <span class="our-guest-header">Our Guest Lecture</span>
+    </h2>
+    <img class="our-guest-img" src= "./images/information-guest-lecture.jpg">
 
-   <section>
-    <h2 class="small-container-three">Our Guest Lecture</h2>
-   </section>
+   </section>   
 
-   <!-- Images for three containers -->
-     
     
     </main>
 
