added start learning container and descriptions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <!-- White Container- It doesn't hurt to keep practicing -->
         <section>
           <h2 class="white-background">
-            <span id="information-text-heading">It doesn't hurt to keep practicing</span></h2>
+            <span class="info-text-heading">It doesn't hurt to keep practicing</span>
+          </h2>
               <p class="information-text-paragraph">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br>
               Eaque ratione nemo inventore eius cumque nulla tempore sint repudiandae debitis nesciunt corporis <br>
               recusandae quidem iusto voluptates dolore, vitae pariatur ea? Voluptas."
@@ -58,6 +59,8 @@
           <span class="orientation-date-header">Orientation Date</span>
         </h2>
           <img class="orientation-img" src= "images/information-orientation.jpg"/>
+          <p class="orientation-info">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a class="orientation-info" href="#" target="_blank">Read More</a>
      </section>
     <!-- Small Right Container- On-Campus-->
      <section>
@@ -65,16 +68,29 @@
         <span class="on-campus-header">On-Campus</span>
       </h2>
       <img class="on-campus-img" src= "images/information-campus.jpg"/>
+      <p class="on-campus-info">Find which campus is close by you</p>
+      <a class="on-campus-info" href="#" target="_blank">Read More</a>
    </section>
  
     <!-- Small Right Container- Our Guest Lecture-->
     <section>
-    <h2 class="small-container-three">
-    <span class="our-guest-header">Our Guest Lecture</span>
-    </h2>
-    <img class="our-guest-img" src= "./images/information-guest-lecture.jpg">
-
+      <h2 class="small-container-three">
+        <span class="our-guest-header">Our Guest Lecture</span>
+      </h2>
+      <img class="our-guest-img" src= "./images/information-guest-lecture.jpg">
+      <p class="our-guest-info">Join a keynote with Oliver Sack
+        <br>
+        about music in medical  treatment
+      </p>
+      <a class="our-guest-info" href="#" target="_blank">Read More</a>
    </section>   
+
+       <!-- Start Learning Container-->
+    <section>
+      <h2 class="start-learning-container">
+        <span class="start-learning-header">Start Learning</span>
+      </h2>
+    </section>   
 
     
     </main>
